syntax = "proto3";

// If you make any changes make sure you run: make regenerate-proto

package gitlab.agent.entity;

option go_package = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/pkg/entity";

import "validate/validate.proto";

// AgentMeta contains information about agentk.
message AgentMeta {
  // Version of the binary.
  string version = 1 [json_name = "version"];
  // Short commit sha of the binary.
  string commit_id = 2 [json_name = "commit_id"];
  // Namespace of the Pod running the binary.
  string pod_namespace = 3 [json_name = "pod_namespace"];
  // Name of the Pod running the binary.
  string pod_name = 4 [json_name = "pod_name"];
}

message GitalyInfo {
  string address = 1 [json_name = "address", (validate.rules).string.min_bytes = 1];
  string token = 2 [json_name = "token"];
  map<string, string> features = 3 [json_name = "features"];
}

message GitalyRepository {
  string storage_name = 1 [json_name = "storage_name", (validate.rules).string.min_bytes = 1];
  string relative_path = 2 [json_name = "relative_path", (validate.rules).string.min_bytes = 1];
  string gl_repository = 3 [json_name = "gl_repository", (validate.rules).string.min_bytes = 1];
  string gl_project_path = 4 [json_name = "gl_project_path", (validate.rules).string.min_bytes = 1];
}
